plugins {
    id 'java'
    id 'application'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'com.google.guava', name: 'guava', version: '30.0-jre'
    compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

application {
    mainClass = 'org.webcrawly.Main'
}


sourceCompatibility = 14

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
